--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,8 @@
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
-auth/ssl
+auth/kubetool
+botstrap/kubetool
 kubetool
 kubetool.yaml
 dist
